--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.9.0",
     "react-modal": "^3.9.1",
     "react-router-dom": "4.2.2",
+    "redux": "3.7.2",
     "sass-loader": "^7.3.1",
     "style-loader": "^1.0.0",
     "validator": "8.0.0",
