--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-eslint": "^10.0.2",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "^3.2.0",
@@ -29,6 +30,7 @@
     "redux": "3.7.2",
     "sass-loader": "^7.3.1",
     "style-loader": "^1.0.0",
+    "uuid": "^3.3.3",
     "validator": "8.0.0",
     "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
