--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-modal": "^3.9.1",
+    "react-redux": "^7.1.1",
     "react-router-dom": "4.2.2",
     "redux": "3.7.2",
     "sass-loader": "^7.3.1",
