--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "^3.2.0",
     "live-server": "^1.2.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "normalize-css": "^2.3.1",
     "react": "^16.9.0",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-dates": "^12.7.0",
     "react-dom": "^16.9.0",
     "react-modal": "^3.9.1",
     "react-redux": "^7.1.1",
