--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-modal": "^3.9.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "4.2.2",
+    "react-test-renderer": "16.0.0",
     "redux": "3.7.2",
     "sass-loader": "^7.3.1",
     "style-loader": "^1.0.0",
