--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "live-server public/",
     "build": "webpack",
     "dev-server": "webpack-dev-server",
-    "test": "jest"
+    "test": "jest --config=jest.config.json"
   },
   "license": "MIT",
   "dependencies": {
@@ -21,10 +21,14 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "^3.2.0",
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "3.0.1",
     "live-server": "^1.2.1",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "normalize-css": "^2.3.1",
+    "raf": "3.3.2",
     "react": "^16.9.0",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "^12.7.0",
